[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-profile-sync-agent"
version = "0.1.0"
description = "Blueprinted agent to sync a local, versioned JSON profile to LinkedIn via Pyppeteer, with a Flask admin UI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
keywords = ["linkedin", "automation", "pyppeteer", "flask", "gitops", "versioning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 3 - Alpha"
]

dependencies = [
  "Flask>=3.0",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "pydantic-core>=2.16",
  "pyppeteer>=1.0",
  "tenacity>=8.2",
  "GitPython>=3.1",
  "watchdog>=4.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "click>=8.1",
  "requests>=2.31",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6",
  "black>=24.0",
  "types-requests",
  "types-click",
  "types-psutil"
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E266", "E501"]
exclude = ["build", "dist"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -ra --color=yes"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "app*"]
